--- a/tgui/packages/tgui/styles/base.scss
+++ b/tgui/packages/tgui/styles/base.scss
@@ -7,7 +7,9 @@
 @use 'sass:math';
 
 $color-fg: #ffffff !default;
-$color-bg: #252525 !default;
+// MINT EDIT START $color-bg: #252525 !default;
+$color-bg: #253828 !default;
+// MINT EDIT END
 $color-bg-section: rgba(0, 0, 0, 0.33) !default;
 $color-bg-grad-spread: 2% !default;
 $color-bg-start: color.adjust(
