--- a/tgui/packages/tgui/styles/colors.scss
+++ b/tgui/packages/tgui/styles/colors.scss
@@ -24,11 +24,20 @@ $brown: #a5673f !default;
 $grey: #767676 !default;
 $light-grey: #aaa !default;
 
+// MINT EDIT START
+/*
 $primary: #4972a1 !default;
 $good: #5baa27 !default;
 $average: #f08f11 !default;
 $bad: #db2828 !default;
 $label: #7e90a7 !default;
+*/
+$primary: #259e07 !default;
+$good: #00a116 !default;
+$average: #f08f11 !default;
+$bad: #db2828 !default;
+$label: #83a77e !default;
+// MINT EDIT END
 
 // Background and foreground color lightness ratios
 $bg-lightness: -15% !default;
