--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -94,7 +94,7 @@
 
 // NT Theme
 .Layout__content {
-  background-image: url('../assets/bg-nanotrasen.svg');
+  background-image: url('../assets/bg-mint.svg'); // MINT EDIT
   background-size: 70%;
   background-position: center;
   background-repeat: no-repeat;
