--- a/tgui/packages/tgui/styles/colors.scss
+++ b/tgui/packages/tgui/styles/colors.scss
@@ -32,8 +32,8 @@ $average: #f08f11 !default;
 $bad: #db2828 !default;
 $label: #7e90a7 !default;
 */
-$primary: #259e07 !default;
-$good: #00a116 !default;
+$primary: #549b43 !default;
+$good: #056e13 !default;
 $average: #f08f11 !default;
 $bad: #db2828 !default;
 $label: #83a77e !default;
