--- a/tgui/packages/tgui/styles/themes/ntos_terminal.scss
+++ b/tgui/packages/tgui/styles/themes/ntos_terminal.scss
@@ -47,6 +47,11 @@
 
   // Layouts
   @include meta.load-css('../layouts/Layout.scss');
+  // MINT EDIT START
+  .Layout__content {
+    background-image: url('../../assets/bg-nanotrasen.svg');
+  }
+  // MINT EDIT END
   @include meta.load-css('../layouts/Window.scss');
   @include meta.load-css(
     '../layouts/TitleBar.scss',
